[tool.poetry]
name = "ComfyUI-api-tools"
version = "0.1.0"
description = "Add some extra endpoints to ComfyUI to manage / monitor remotely."
authors = ["brantje <brantje@gmail.com>"]
license = { text = "MIT License" }
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diskcache = "^5.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "comfyui_api_tools" # Unique identifier for your node. Immutable after creation.
description = "Add some extra endpoints to ComfyUI to manage / monitor remotely."
version = "1.0.6" # Custom Node version. Must be semantically versioned.
dependencies  = ['diskcache', 'tqdm'] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/brantje/ComfyUI-api-tools"

[tool.comfy]
PublisherId = "brantje"
DisplayName = "ComfyUI Api Tools"
