[tool.poetry]
name = "ComfyUI-api-tools"
version = "1.1.3"
description = "Add some extra endpoints to ComfyUI to manage / monitor remotely."
authors = ["brantje <brantje@gmail.com>"]
license = { text = "MIT License" }
readme = "README.md"

[tool.poetry.dependencies]

pynvml = "^11.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "comfyui_api_tools" # Unique identifier for your node. Immutable after creation.
description = "Add some extra endpoints to ComfyUI to manage / monitor remotely."
version = "1.1.3" # Custom Node version. Must be semantically versioned.
dependencies  = ['pynvml'] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/brantje/ComfyUI-api-tools"

[tool.comfy]
PublisherId = "brantje"
DisplayName = "ComfyUI Api Tools"
